fixed global search z-index

--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -652,7 +652,7 @@ video {
     width: 100%;
     height: 100%;
     background-color: rgba(0, 0, 0, 0.5);
-
+    z-index: 1;
     -webkit-transition: all 0.5s ease-in-out;
   -moz-transition: all 0.5s ease-in-out;
   -o-transition: all 0.5s ease-in-out;
